<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiYXJuYXUxMjMxMiIsImEiOiJjbGhuaWF6cncwOTI0M2RwZXM2MXdpZmk1In0._zPeJDD9HHf_GN5WginUlA</string>
    <string name="app_name">TransMed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inventari">Inventari</string>
    <string name="gestions">Gestions</string>
    <string name="mapa">Mapa</string>
    <string name="comandes">Comandes</string>
    <string name="flotes">Flotes</string>
    <string name="usuari">Usuari</string>
    <string name="perfil">Perfil</string>
    <string name="editar">EDITAR</string>
    <string name="dades_personals">Dades Personals</string>
    <string name="notificacions">Notificacions</string>
    <string name="configuració">Configuració</string>
    <string name="sortir">Sortir</string>
    <string name="tema_oscuro">Tema Fosc</string>
    <string name="idioma">Idioma</string>
    <string name="id_nom">Nom</string>
    <string name="id_hint_nom">Nom del gestor</string>
    <string name="id_cognoms">Cognoms</string>
    <string name="id_hint_cognoms">Cognoms del gestor</string>
    <string name="id_data_naixement">Data de naixement</string>
    <string name="id_pais">País</string>
    <string name="id_genere">Gènere</string>
    <string name="id_hint_pais">País origen</string>
    <string name="id_ciutat">Ciutat</string>
    <string name="id_hint_ciutat">Ciutat origen</string>
    <string name="id_guardar_canvis">Guardar canvis</string>
    <string name="filtres">Filtres</string>
    <string name="sort_option_medicament_asc">Medicament (ascendent)</string>
    <string name="sort_option_medicament_desc">Medicament (descendent)</string>
    <string name="sort_option_quantitat">Quantitat (de menor a major)</string>
    <string name="sort_option_vendes">Quantitat (de major a menor</string>
    <string name="sort_option_ciutat_asc">PVP (de menor a major)</string>
    <string name="sort_option_ciutat_des">PVP (de major a menor)</string>
    <string name="texto_inventario">Inventari de medicaments</string>
    <string name="texto_inventari">INVENTARI</string>
    <string name="texto_medicament">Medicament :</string>
    <string name="texto_quantitat_magatzem">Quantitat magatzem :</string>
    <string name="texto_quantitat_venuda">Quantitat venuda :</string>
    <string name="texto_ciutat_comprat">Ciutat que més ha comprat :</string>
    <string name="hint_nom_medicament">Nom del medicament</string>
    <string name="hint_numero_esgotat">Número / Esgotat</string>
    <string name="hint_valor_numeric">Valor numèric</string>
    <string name="hint_nom_ciutat">Nom Ciutat</string>
    <string name="texto_codi">Codi Nacional: </string>
    <string name="texto_tipo">Tipus: </string>
    <string name="tipus_med">tipus med</string>
    <string name="tipus_adminis">Administració: </string>
    <string name="tipus_administ">Administració</string>
    <string name="formaa">Forma</string>
    <string name="preu_venta">Preu de venta: </string>
    <string name="cuanti">Quantitat</string>
    <string name="recepta">Recepta: </string>
    <string name="receptaa">Recepta</string>
    <string name="actualizar">Actualitzar</string>
    <string-array name="servers">
        <item>Cloud</item>
        <item>Edge0</item>
        <item>Edge1</item>
        
    </string-array>
    <string-array name="cities">
        <item>vilanova i la geltru</item>
        <item>cubelles</item>
        <item>barcelona</item>
        
    </string-array>
    <string name="afegir_meds">Afegir Medicaments</string>
    <string name="nom_med">Nom del medicament</string>
    <string name="codi_nacional">Codi nacional</string>
    <string name="use_type">Tipus ús</string>
    <string name="type_of_adm">Tipus administració</string>
    <string name="pres_need">Necessita recepta? (true/false)</string>
    <string name="contents">Contingut</string>
    <string name="form">Format</string>
    <string name="excipients">Excipients</string>
    <string name="med_url">URL_imatge</string>
    <string name="pvp">PVP</string>
    <string name="quantitat">Quantitat</string>
    <string name="peticions_pacients">Peticions de Pacients</string>
    <string name="info_medico">Informe metge</string>
    <string name="medico">Metge: </string>
    <string name="nom_medico">Nom del Metge</string>
    <string name="data_naixement">Data de neixement:</string>
    <string name="info_medico_genero">Genere:</string>
    <string name="info_medico_pais">País:</string>
    <string name="info_medico_provincia">Provincia:</string>
    <string name="info_medico_mas_fem">Masculí o femení</string>
    <string name="info_medico_n_t_sanitaria">Nº tarjeta sanitària</string>
    <string name="info_medico_antecedents_personals">Antecedents personals</string>
    <string name="info_medico_descripcio_antecedents">Descripció dels antecedents personals del pacient</string>
    <string name="info_medico_problemes_salut">Problemes de salud actuals</string>
    <string name="info_medico_tractaments_medics">Trataments médics i farmacológics</string>
    <string name="info_medico_descripcio_problemes">Descripció dels problemes de salud actuals del pacient.</string>
    <string name="info_medico_descripcio_tractament">Descripció del tratament médic i framacológic.</string>
    <string name="titulo_home">Inici</string>
    <string name="titulo_peticiones">Peticions</string>
    <string name="titulo_recepta">Receptes</string>
    <string name="titulo_usuario">Usuari</string>
    <string name="titulo_pacientes">Pacients</string>
    <string name="info_pacient">Informació  Pacient</string>
    <string name="nom_info_pacient">Nom:</string>
    <string name="cognoms_info_pacient">Cognoms:</string>
    <string name="n_id_info_pacient">Nº de identificació:</string>
    <string name="n_comanda_info_pacient">Nº Comanda:</string>
    <string name="info_pacient_nom">Nom del Pacient</string>
    <string name="info_fecha_peticion">Data de petició:</string>
    <string name="n_ref_comanda">Nº de referència comanda</string>
    <string name="llista_medicaments">Llista de medicaments:</string>
    <string name="info_pacient_aceptar">Acceptar</string>
    <string name="info_pacient_rebutjar">Rebutjar</string>
    <string name="info_opinion">Opinió:</string>
    <string name="info_comentari">Escriu el teu comentari aquí</string>
    <string name="id_nom_metge">Nom del metge</string>
    <string name="id_cognom_metge">Cognoms del metge</string>
    <string name="aprobar">Aprovada:</string>
    <string name="receta">Nova recepta</string>
    <string name="button_receta">Afegir</string>
    <string name="info_receta_paciente">Nom complet pacient:</string>
    <string name="info_receta_medicamento">Medicaments:</string>
    <string name="info_receta_duracio">Duració tractament:</string>
    <string name="info_receta_renovacio">Renovació tractament:</string>
    <string name="info_receta_nota">Notes:</string>
    <string name="info_receta_guardar">Desar canvis</string>
    <string name="info_receta_text_paciente">Pacient</string>
    <string name="info_receta_text_medicamento">Medicament</string>
    <string name="info_receta_text_duracio">Duració</string>
    <string name="info_receta_text_renovacio">Renovació</string>
    <string name="info_receta_text_nota">Escriu aquí...</string>
    <string name="info_receta_popup">Afegir medicament a la recepta</string>
    <string name="info_receta_popup_aceptar">Acceptar</string>
    <string name="info_receta_popup_cancelar">Cancelar</string>
    <string name="info_receta_popup_codi">Codi del medicament</string>
    <string name="info_receta_popup_quant">Quantitat del medicament</string>
    <string name="historial_peticions">Historial Peticions</string>
    <string name="sort_options_nom_a">Nom (ascendent)</string>
    <string name="sort_options_nom_d">Nom (descendent)</string>
    <string name="mes_nou">Més nou</string>
    <string name="mes_antic">Més antic</string>
    <string name="medica">Medicament</string>
    <string name="credencials_medic">Credencials Mèdiques</string>
    <string name="info_contacte">Informació de Contacte</string>
    <string name="receta_crear_consultar_titulo">Gestions de Receptes</string>
    <string name="receta_crear_consultar_seleccionar">Seleccionar:</string>
    <string name="receta_crear_consultar_crear">Crear</string>
    <string name="receta_crear_consultar_historial">Historial</string>
    <string name="receta_hitorial_titulo">Historial de Receptes</string>
    <string name="cistella">Cistella</string>
    <string name="scanQR">Escanejar QR</string>
    <string name="afegir_codi_recepta">Afegir codi de recepta</string>
    <string name="afegir_codi">Afegir codi</string>
    <string name="registre">Registre</string>
    <string name="correu">Correu</string>
    <string name="contrassenya">Contrasenya</string>
    <string name="given_name">Nom Usuari</string>
    <string name="user_full_name">Nom i cognoms</string>
    <string name="email">Correu</string>
    <string name="phone">Telèfon</string>
    <string name="Address">Adreça</string>
    <string name="password">Contrasenya</string>
    <string name="re_password">Repeteix Contrasenya</string>
    <string name="bt_antialergics">Registrat</string>
    <string name="payment_method_title">Selecciona un mètode de pagament</string>
    <string name="card_payment">Targeta de Crèdit</string>
    <string name="paypal_payment">PayPal</string>
    <string name="crypto_payment">Criptomonedes</string>
    <string name="card_number_hint">Número de targeta</string>
    <string name="paypal_email_hint">Email</string>
    <string name="paypal_phone_hint">Telèfon</string>
    <string name="order_summary">Resum de la petició</string>
    <string name="dades_comprador">Dades del comprador</string>
    <string name="intro_codi_recepta">Introdueix el codi de la recepta</string>
    <string name="enviar">Enviar</string>
    <string name="intro_codi">Introdueix el codi</string>
    <string name="finalitzar_compra">Finalitzar Compra</string>
    <string name="modify_address">Modificar Adreça</string>
    <string name="address">Adreça</string>
    <string name="ADRESS">ADREÇA</string>
    <string name="optional">OPCIONAL</string>
    <string name="city">Localitat / Ciutat</string>
    <string name="CITY">LOCALITAT / CIUTAT</string>
    <string name="province">Província</string>
    <string name="postal_code">Codi postal</string>
    <string name="crema">Crema</string>
    <string name="data_compra">Data de compra</string>
    <string name="estat">Estat</string>
    <string name="detalls">Detalls</string>
    <string name="med_name">Nom medicament</string>
    <string name="insert_med_name">Inserir nom medicament</string>
    <string name="price">Preu</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="prescription_needed">Necessitat prescripció</string>
    <string name="viaa">Via</string>
    <string name="orall">Oral</string>
    <string name="injectable">Injectable</string>
    <string name="sublingual">Sublingual</string>
    <string name="rectal">Rectal</string>
    <string name="vaginal">Vaginal</string>
    <string name="ocular">Ocular</string>
    <string name="formatt">Format</string>
    <string name="tablets">Tabletes</string>
    <string name="liquids">Líquids</string>
    <string name="capsules">Càpsules</string>
    <string name="topicals">Tòpics</string>
    <string name="suppositories">Supositoris</string>
    <string name="drops">Gotes</string>
    <string name="inhalers">Inhaladors</string>
    <string name="injections">Injeccions</string>
    <string name="implants">Implants</string>
    <string name="gel">Gel</string>
    <string name="Pols">Pols</string>
    <string name="ophthalmic">Oftàlmic</string>
    <string name="inhalation">Inhalador</string>
</resources>