<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_X"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:text="X"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Price range slider -->
        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="26dp"
            android:text="@string/price"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_X" />

        <!-- Min and Max price input fields -->
        <EditText
            android:id="@+id/editTextMinPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/min_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPrice" />

        <EditText
            android:id="@+id/editTextMaxPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/max_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextMinPrice" />

        <!-- Prescription needed checkbox -->
        <CheckBox
            android:id="@+id/checkBoxPrescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="26dp"
            android:text="@string/prescription_needed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextMaxPrice" />

        <!-- Pill ingestion methods checkboxes -->
        <TextView
            android:id="@+id/textViewVia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viaa"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxPrescription" />

        <CheckBox
            android:id="@+id/checkBoxOral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewVia" />

        <CheckBox
            android:id="@+id/checkBoxTopicos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/topicals"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxOral" />

        <CheckBox
            android:id="@+id/checkBoxInhalation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inhalation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxTopicos" />

        <CheckBox
            android:id="@+id/checkBoxOphthalmic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ophthalmic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxInhalation" />

        <!-- Pill format checkboxes -->
        <TextView
            android:id="@+id/textViewFormat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="26dp"
            android:text="@string/formatt"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxOphthalmic" />

        <CheckBox
            android:id="@+id/checkBoxTabletas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tablets"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewFormat" />

        <CheckBox
            android:id="@+id/checkBoxCapsulas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capsules"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxTabletas" />

        <CheckBox
            android:id="@+id/checkBoxLiquidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/liquids"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxCapsulas" />

        <CheckBox
            android:id="@+id/checkBoxGel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxLiquidos" />

        <CheckBox
            android:id="@+id/checkBoxCrema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crema"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxGel" />

        <CheckBox
            android:id="@+id/checkBoxPols"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pols"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxCrema" />


        <!-- Apply button -->
        <Button
            android:id="@+id/buttonApply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Aplicar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBoxPols" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
