<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medico.fragments.recetaPaciente.RecetaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/rinkart"
                android:text="@string/receta"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rinkart_italic"
                        android:text="@string/info_receta_paciente"
                        android:textStyle="bold"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/et_receta_paciente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rinkart_italic"
                        android:hint="@string/info_receta_text_paciente"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rinkart_italic"
                        android:textStyle="bold"
                        android:text="@string/info_receta_medicamento"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/et_receta_medicamento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/info_receta_text_medicamento"
                        android:fontFamily="@font/rinkart_italic"
                        android:textSize="20sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rinkart_italic"
                        android:textStyle="bold"
                        android:text="@string/info_receta_duracio"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/et_receta_duracion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/info_receta_text_duracio"
                        android:fontFamily="@font/rinkart_italic"
                        android:textSize="20sp"/>

                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rinkart_italic"
                    android:textStyle="bold"
                    android:text="@string/info_receta_nota"
                    android:textSize="20sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/commentTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_receta_notas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/rinkart_italic"
                        android:textStyle="bold"
                        android:hint="@string/info_receta_text_nota" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

                <Button
                    android:id="@+id/btn_recepta_guardar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:fontFamily="@font/rinkart_italic"
                    android:textSize="20sp"
                    android:text="@string/info_receta_guardar"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>